--- a/config/helmchart/templates/manager.yaml
+++ b/config/helmchart/templates/manager.yaml
@@ -1,13 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "volume-expander-operator.fullname" . }}
+  name: {{ include "patch-operator.fullname" . }}
   labels:
-    {{- include "volume-expander-operator.labels" . | nindent 4 }}
+    {{- include "patch-operator.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
-      {{- include "volume-expander-operator.selectorLabels" . | nindent 6 }}
+      {{- include "patch-operator.selectorLabels" . | nindent 6 }}
+      control-plane: patch-operator
   replicas: {{ .Values.replicaCount }}
   template:
     metadata:
@@ -16,14 +17,14 @@ spec:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       labels:
-        {{- include "volume-expander-operator.selectorLabels" . | nindent 8 }}
-        operator: volume-expander-operator
+        {{- include "patch-operator.selectorLabels" . | nindent 8 }}
+        control-plane: patch-operator
     spec:
-      serviceAccountName: volume-expander-operator-controller-manager
+      serviceAccountName: controller-manager
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
-      {{- end }}
+      {{- end }}   
       containers:
       - args:
         - --secure-listen-address=0.0.0.0:8443
@@ -39,12 +40,8 @@ spec:
           name: https
         volumeMounts:
         - mountPath: /etc/certs/tls
-          name: tls-cert
+          name: patch-operator-certs
         imagePullPolicy: {{ .Values.kube_rbac_proxy.image.pullPolicy }}
-        {{- with .Values.env }}
-        env:
-         {{- toYaml . | nindent 8 }}
-        {{- end }}         
         resources:
           {{- toYaml .Values.kube_rbac_proxy.resources | nindent 10 }}
       - command:
@@ -53,6 +50,14 @@ spec:
         - --leader-elect
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        volumeMounts:
+        - name: webhook-server-cert
+          readOnly: true
+          mountPath: /tmp/k8s-webhook-server/serving-certs
+        {{- with .Values.env }}
+        env:
+         {{- toYaml . | nindent 8 }}
+        {{- end }}        
         name: {{ .Chart.Name }}
         resources:
           {{- toYaml .Values.resources | nindent 10 }}
@@ -81,7 +86,11 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
-      - name: tls-cert
+      - name: patch-operator-certs
         secret:
           defaultMode: 420
-          secretName: volume-expander-operator-certs      
+          secretName: patch-operator-certs  
+      - name: webhook-server-cert
+        secret:
+          secretName: webhook-server-cert
+          defaultMode: 420              
