--- a/config/local-development/tilt/kustomization.yaml
+++ b/config/local-development/tilt/kustomization.yaml
@@ -1,5 +1,5 @@
 # Adds namespace to all resources.
-namespace: volume-expander-operator
+namespace: patch-operator
 
 # Labels to add to all resources and selectors.
 #commonLabels:
