--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    control-plane: controller-manager
+    control-plane: patch-operator
     openshift.io/cluster-monitoring: "true"
   name: system
 ---
@@ -12,18 +12,19 @@ metadata:
   name: controller-manager
   namespace: system
   labels:
-    operator: volume-expander-operator
+    control-plane: patch-operator
 spec:
   selector:
     matchLabels:
-      operator: volume-expander-operator
+      control-plane: patch-operator
   replicas: 1
   template:
     metadata:
       labels:
-        operator: volume-expander-operator
+        control-plane: patch-operator
     spec:
-      serviceAccountName: controller-manager
+      securityContext:
+        runAsNonRoot: true
       containers:
       - command:
         - /manager
@@ -31,20 +32,27 @@ spec:
         - --leader-elect
         image: controller:latest
         name: manager
-        resources:
-          requests:
-            cpu: 100m
-            memory: 20Mi
+        securityContext:
+          allowPrivilegeEscalation: false
         livenessProbe:
           httpGet:
             path: /healthz
             port: 8081
+            scheme: HTTP
           initialDelaySeconds: 15
           periodSeconds: 20
         readinessProbe:
           httpGet:
             path: /readyz
             port: 8081
+            scheme: HTTP
           initialDelaySeconds: 5
           periodSeconds: 10
+        resources:
+          limits:
+            memory: 500Mi
+          requests:
+            cpu: 100m
+            memory: 100Mi
+      serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
