--- a/config/rbac/auth_proxy_service.yaml
+++ b/config/rbac/auth_proxy_service.yaml
@@ -2,15 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    operator: volume-expander-operator
+    control-plane: patch-operator
   annotations:
-    service.alpha.openshift.io/serving-cert-secret-name: volume-expander-operator-certs
-  name: controller-manager-metrics
+    service.alpha.openshift.io/serving-cert-secret-name: patch-operator-certs      
+  name: controller-manager-metrics-service
   namespace: system
 spec:
   ports:
   - name: https
     port: 8443
+    protocol: TCP
     targetPort: https
   selector:
-    operator: volume-expander-operator
+    control-plane: patch-operator
